<resources>
    <string name="app_name">AppNovartes</string>
    <string name="logo">Logo</string>

    <string name="text_nine3">999</string>
    <string name="text_exone">x1</string>

    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>

    <string name="txt_back">Back</string>
    <string name="txt_title">Title</string>

    <string name="wrong_user_passwd">Wrong user or password</string>
    <string name="txt_welcome">Welcome</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_complete_fields">Complete all fields</string>

    <string name="txt_list_products">Products list</string>
    <string name="txt_search_products">Search products…</string>

    <string name="btn_cart">Cart</string>
    <string name="btn_add_cart">Add to Cart</string>
    <string name="btn_user_menu">User Menu</string>

    <string name="txt_fabric_type">Fabric type</string>
    <string name="txt_fabric_color">Fabric color</string>
    <string name="txt_leg_type">Legs type</string>
    <string name="txt_leg_color">Legs color</string>
    <string name="txt_measurement">Measurements</string>
    <string name="txt_sewing_type">Sewing type</string>

    <string name="txt_product">Product</string>
    <string name="txt_product_title">Customize Product</string>
    <string name="txt_product_name">Product name</string>
    <string name="txt_product_code">Product code</string>
    <string name="txt_product_category">Category</string>
    <string name="txt_product_subcategory">Subcategory</string>
    <string name="txt_product_cloth">Cloth</string>
    <string name="txt_product_leg">Legs</string>
    <string name="txt_observations">Observations</string>
    <string name="txt_addtocart">Add to Cart</string>
    <string name="txt_emptycart">Cart is empty</string>

    <string name="txt_max_quantity">Maximum stock available: </string>
    <string name="txt_product_added_tocart">Product added to cart</string>
    <string name="txt_product_deleted">Product deleted</string>
    <string name="btn_confirm_buy">Confirm purchase</string>

    <string name="sp_option">Choose an option…</string>

    <string name="txt_profile_title">Client data</string>
    <string name="txt_profile_name">Name</string>
    <string name="txt_profile_mail">Email</string>
    <string name="txt_profile_ctacte">Balance</string>

    <string name="btn_confirm">Confirm</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_back">Back</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="txt_search">Search</string>
    <string name="txt_sendmail">Send mail…</string>

    <string name="txt_app_version">Version 1.0</string>

    <string name="txt_loginerror">There was a problem logging in</string>
    <string name="txt_networkerror">There was a network error</string>
    <string name="txt_nomailapp">No mail client installed</string>

</resources>