<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CustomLinearLayout.Horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtItemCartNombre"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_product_name" />

        <TextView
            android:id="@+id/txtItemCartRubro"
            style="@style/TextSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_product_category" />

        <TextView
            android:id="@+id/txtItemCartCantidad"
            android:gravity="center"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text_exone" />
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <ImageButton
        style="@style/RedButton"
        android:layout_width="@dimen/height_md"
        android:layout_height="@dimen/height_md"
        android:id="@+id/btnItemCartEliminar"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_delete3"/>
</LinearLayout>


