<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CustomLinearLayout.Vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtGreeting"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_welcome" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnUser"
            android:layout_width="@dimen/height_md"
            android:layout_height="@dimen/height_md"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/btn_user_menu"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_user" />
    </LinearLayout>

    <android.widget.SearchView
        android:id="@+id/svProductSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:queryHint="@string/txt_search_products" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerArticulos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp" />
</LinearLayout>
